Kubernetes/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: order-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderservice
  template:
    metadata:
        labels:    
           app: orderservice
    spec:
        containers:
           - name: orderservice
             image: fireflyczyk/orderservice:latest
