Kubernetes/order-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: orderservice
  ports:
    - name: orderservice
      protocol: TCP
      port: 80
      targetPort: 80
