Kubernetes/sql-order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sql
  template:
    metadata:
      labels:
        app: sql
    spec:
      containers:
      - name: sql
        image: mcr.microsoft.com/mssql/server
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: sql-database
          mountPath: /var/opt/mssql/data
      volumes:
      - name: sql-database
        persistentVolumeClaim:
          claimName: sql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: sql-service
spec:
  selector:
    app: sql
  ports:
    - name: sql
      protocol: TCP 
      port: 1433
      targetPort: 1433
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: sql-loadbalancer
spec:
  selector:
    app: sql
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  type: LoadBalancer
